<resources>
    <string name="app_name">B First</string>
    <string name="full_name">Fullname</string>
    <string name="username">Email</string>


    <string name="password">Password</string>
    <string name="password_signUp">Password (at least 8 character)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">LogOut</string>
    <string name="forgot_password">Forgot Password ?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>


    <string name="product_description"> \n \n
                                        Product Description
                                         \n \n
                                        Upgrade to the Redmi 5A smartphone that boasts a fully-laminated HD display. Play games, watch videos, and much more on this phone, as it is powered by a Qualcomm Snapdragon 425 processor. Take advantage of its 13 MP camera with PDAF and capture scenic shots and gorgeous group photos. It houses a 3000 mAh battery that gives you a standby time of up to 8 days.
                                        \n \n
                                        12.7 cm (5) HD Display
                                        \n \n
                                        View everything in high-definition on its beautiful fully-laminated HD display. Also, the Reading mode, that filters out the blue light, protects your vision and reduces eye fatigue.
                                        \n \n
                                        Battery
                                        \n \n
                                        It is powered by a 3000 mAh battery. This is coupled with the MIUI system-level power optimisation feature for efficient power usage. You can get up to 8 days of standby time, 7 hours of video playback and 6 hours of gaming.

                                        \n \n

        <!--                                        13 MP Camera with PDAF-->
        <!--                                        \n \n-->

        <!--                                        Take sharp and crisp photos as it equipped with a fast-focusing 13 MP camera.-->
        <!--                                        \n \n-->

        <!--                                        Performance-->
        <!--                                        \n \n-->

        <!--                                        Seamlessly play games, watch videos and browse the Internet as it is powered by a Qualcomm Snapdragon 425 (quad-core) processor and 2 GB of RAM. You can store music, movies, photos and much more as it comes with 16 GB internal storage.-->
        <!--                                        \n \n-->

        <!--                                        Dual SIM + microSD Card Slot-->
        <!--                                        \n \n-->

        <!--                                        You can use two SIM cards simultaneously and expand your data storage by up to 128 GB using a microSD card.-->
        <!--                                        \n \n-->

        <!--                                        MIUI 9 - Lightning Fast-->
        <!--                                        \n \n-->

        <!--                                        It recognises your train ticket SMS messages and turns them into simple cards that has all the important information. Mi Video supports popular video formats and subtitles, and smartly groups episodes by the show name. It also allows you to hide videos. With Mi Drop, you can seamlessly transfer files between devices (Android 4.4 or later) without Internet connection. The App vault lets you access your most used features and info without searching for them.-->



    </string>
    <string name="or">Or</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an Account ? Sign Up</string>
    <string name="existing_user_sign_in">Existing User! | Sign_In</string>
    <string name="don_t_worry_we_just_need_your_registered_email">Don\'t worry we just need your registered email</string>
    <string name="email">Email</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="continue_text">Continue</string>
    <string name="rs_4999">Rs.4999/-</string>
    <string name="total_amount">Total Amount</string>
    <string name="allow_merchant_to_fetch_paytm_instruments"><![CDATA[Allow <Merchant> to fetch Paytm instruments]]></string>


    <string-array name="india_states">
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>


</resources>
