<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".fragments.ResetPasswordFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/main_profile_image"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"

            android:layout_marginEnd="16dp"
            android:src="@drawable/forgotpassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_profile_image" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"

            android:text="@string/don_t_worry_we_just_need_your_registered_email"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"            android:hint="@string/email"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/forgot_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                 android:ems="10"

                 android:inputType="textEmailAddress"
                 android:theme="@style/RedProgressbarTheme" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/Reset_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="16dp"

            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/blue"
            android:enabled="false"
            android:text="Reset Password"
            android:textAllCaps="false"
            android:textColor="#50ffffff"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.56"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password_email_icon_container" />

        <TextView
            android:id="@+id/go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:text="&lt; &lt; Go back"
            android:textColor="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Reset_button" />

        <LinearLayout
            android:id="@+id/forgot_password_email_icon_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail">


            <ImageView
                android:id="@+id/forgot_password_email_icon_green"
                android:layout_width="25dp"
                android:layout_height="20dp"

                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:src="@drawable/greenemail"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/forgot_password_email_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"

                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:src="@drawable/redemail"
                android:visibility="gone" />

            <TextView
                android:id="@+id/forgot_password_email_icon_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Recovery email Sent Successfully ! Check Email"
                android:textColor="@android:color/holo_green_dark"
                android:visibility="gone" />


            <TextView
                android:id="@+id/forgot_password_email_icon_text_red"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/green"
                android:visibility="gone" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/forgot_password_progressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:indeterminate="true"
            android:theme="@style/RedProgressbarTheme"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/Reset_button"
            app:layout_constraintEnd_toEndOf="@+id/forgot_password_email_icon_container"
            app:layout_constraintStart_toStartOf="@+id/forgot_password_email_icon_container"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password_email_icon_container" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>